<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Admin_login">

    <EditText
        android:id="@+id/logInUsernameTextView"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:enabled="true"
        android:hint="Admin Username"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/logIn_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInUsernameTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="#00BFA5"
        android:onClick="adminLog"
        android:text="@string/login_button_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>